--- a/package.json
+++ b/package.json
@@ -11,24 +11,35 @@
     "url": "https://github.com/Raynos/funpm/issues",
     "email": "raynos2@gmail.com"
   },
-  "contributors": [{
-    "name": "Raynos"
-  }],
+  "contributors": [
+    {
+      "name": "Raynos"
+    }
+  ],
   "dependencies": {
+    "lb_pool": "1.2.0",
+    "minimist": "1.1.1",
+    "process": "0.11.0",
+    "semver": "4.3.3"
   },
   "devDependencies": {
     "coveralls": "^2.10.0",
+    "fixtures-fs": "^2.0.0",
     "istanbul": "^0.3.5",
+    "itape": "1.7.1",
+    "leaked-handles": "5.2.0",
     "lint-trap": "^1.0.0",
     "opn": "^1.0.1",
     "pre-commit": "0.0.11",
     "tap-spec": "^2.1.1",
-    "tape": "^3.4.0"
+    "tape": "^4.0.0"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "http://github.com/Raynos/funpm/raw/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/Raynos/funpm/raw/master/LICENSE"
+    }
+  ],
   "scripts": {
     "test": "npm run jshint -s && npm run cover -s",
     "unit-test": "node test/index.js | tap-spec",
