--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "test": "npm run jshint -s && npm run cover -s",
     "unit-test": "node test/index.js | tap-spec",
     "jshint": "eslint $(git ls-files | grep '.js$')",
-    "cover": "istanbul cover --report html --print detail -- test/index.js && npm run check-cover -s",
+    "cover": "istanbul cover --report html --print detail -- test/index.js",
     "check-cover": "istanbul check-coverage --branches=100 --lines=100 --functions=100",
     "view-cover": "opn ./coverage/index.html",
     "travis": "npm run cover -s && istanbul report lcov && ((cat coverage/lcov.info | coveralls) || exit 0)"
